# self_personality_LLM

./: .gitignore  LICENSE  README.md  discussion.md  plan.md  pyproject.toml  requirements.txt
configs/: default.yaml  experiment1.yaml  experiment2.yaml  experiment3.yaml  experiment4.yaml
data/seeds/: sample_narratives.jsonl
scripts/: run_experiment1.sh  run_experiment2.sh  run_experiment3.sh  run_experiment4.sh
src/: config.py  main.py
src/auxiliary/: adversarial_erasure.py  cross_distribution.py  ewc_protection.py  lora_stacking.py  mechanistic_probes.py  phased_training.py
src/core/: checkpoint.py  logging_.py  model_utils.py
src/evaluation/: adversarial_eval.py  consistency_eval.py  cross_distribution_eval.py
src/experiment1/: activation_extractor.py  bias_injection.py  dual_loss_trainer.py  identity_direction.py  seed_generator.py
src/experiment2/: adversarial_prefixes.py  consistency_scorer.py  dpo_trainer.py  preference_dataset.py  self_statement_generator.py
src/experiment3/: drive_losses.py  empowerment.py  internal_state.py  multi_objective_trainer.py  self_narrative_memory.py
src/experiment4/: behavioral_big5.py  crystallization_plotter.py  probe_suite.py  style_probes.py  value_choice.py
src/utils/: data_utils.py  wandb_logger.py
